# famchat

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: chat_client.cpp
script/: location.py
server/: CMakeLists.txt  location.py
server/src/: chat_server.cpp
